--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,168 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#tarjeta_1 {
+    position: relative;
+    height: 60%;
+    border-radius: 20px;
+    transition: all 0.3s ease;
+
+}
+
+#tarjeta_1 img:first-child {
+    box-shadow: 0 60px 60px -60px rgba(0, 30, 255, 0.5);
+    border-radius: 20px;
+    object-fit:cover;
+    width: 100%;
+    height: 100%;
+}
+
+#tarjeta_1 img:last-child {
+    position: absolute;
+    width: 500px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    transition: 0.3s ease;
+    opacity: 0;
+}
+
+#tarjeta_1:hover {
+    transform: 
+    perspective(250px) 
+    rotateX(10deg)
+    translateY(-5%) 
+    translateZ(0);
+}
+
+#tarjeta_1::before{
+    content: '';
+    position:absolute;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(to bottom,transparent 10%,rgba(0,0,0,5)50%,rgb(0,0,0)95%);
+    opacity: 0;
+    border-radius: 20px;
+    transition: all .3s ease;
+}
+
+#tarjeta_1:hover::before{
+    opacity: 1;
+}
+#tarjeta_1:hover img:last-child{
+    opacity: 1;
+    transform: translateY(10%);
+}
+
+#tarjeta_2 {
+    position: relative;
+    height: 60%;
+    border-radius: 20px;
+    transition: all 0.3s ease;
+
+}
+
+#tarjeta_2 img:first-child {
+    box-shadow: 0 60px 60px -60px rgba(0, 30, 255, 0.5);
+    border-radius: 20px;
+    object-fit:cover;
+    width: 100%;
+    height: 100%;
+}
+
+#tarjeta_2 img:last-child {
+    position: absolute;
+    width: 500;
+    bottom: 0;
+    left: -10%;
+    margin: auto;
+    transition: 0.3s ease;
+    opacity: 0;
+}
+
+#tarjeta_2:hover {
+    transform: 
+    perspective(250px) 
+    rotateX(10deg)
+    translateY(-5%) 
+    translateZ(0);
+}
+
+#tarjeta_2::before{
+    content: '';
+    position:absolute;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(to bottom,transparent 10%,rgba(0,0,0,5)50%,rgb(0,0,0)95%);
+    opacity: 0;
+    border-radius: 20px;
+    transition: all .3s ease;
+}
+
+#tarjeta_2:hover::before{
+    opacity: 1;
+}
+#tarjeta_2:hover img:last-child{
+    opacity: 1;
+    transform: translateY(10%);
+}
+
+#tarjeta_3 {
+    position: relative;
+    height: 60%;
+    border-radius: 20px;
+    transition: all 0.3s ease;
+
+}
+
+#tarjeta_3 img:first-child {
+    box-shadow: 0 60px 60px -60px rgba(0, 30, 255, 0.5);
+    border-radius: 20px;
+    object-fit:cover;
+    width: 100%;
+    height: 100%;
+}
+
+#tarjeta_3 img:last-child {
+    position: absolute;
+    width: 500;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    transition: 0.3s ease;
+    opacity: 0;
+}
+
+#tarjeta_3:hover {
+    transform: 
+    perspective(250px) 
+    rotateX(10deg)
+    translateY(-5%) 
+    translateZ(0);
+}
+
+#tarjeta_3::before{
+    content: '';
+    position:absolute;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(to bottom,transparent 10%,rgba(0,0,0,5)70%,rgb(0,0,0)60%);
+    opacity: 0;
+    border-radius: 20px;
+    transition: all .3s ease;
+}
+
+#tarjeta_3:hover::before{
+    opacity: 1;
+}
+#tarjeta_3:hover img:last-child{
+    opacity: 1;
+    transform: translateY(10%);
+}
+
