--- a/src/index.css
+++ b/src/index.css
@@ -7,15 +7,18 @@
     height: 60%;
     border-radius: 20px;
     transition: all 0.3s ease;
+    background-color: rgba(0, 0, 0, 0.444);
+
 
 }
 
-#tarjeta_1 img:first-child {
+#imagen_1_tarjeta_1 {
     box-shadow: 0 60px 60px -60px rgba(0, 30, 255, 0.5);
     border-radius: 20px;
     object-fit:cover;
     width: 100%;
     height: 100%;
+
 }
 
 #tarjeta_1 img:last-child {
@@ -35,6 +38,19 @@
     rotateX(10deg)
     translateY(-5%) 
     translateZ(0);
+
+}
+#tarjeta_1:hover p{
+    opacity: 100%;
+    transform: translateY(33rem); 
+}
+#tarjeta_2:hover p{
+    opacity: 100%;
+    transform: translateY(33rem); 
+}
+#tarjeta_3:hover p{
+    opacity: 100%;
+    transform: translateY(33rem); 
 }
 
 #tarjeta_1::before{
@@ -54,7 +70,7 @@
 }
 #tarjeta_1:hover img:last-child{
     opacity: 1;
-    transform: translateY(10%);
+
 }
 
 #tarjeta_2 {
@@ -65,7 +81,7 @@
 
 }
 
-#tarjeta_2 img:first-child {
+#imagen_1_tarjeta_2 {
     box-shadow: 0 60px 60px -60px rgba(0, 30, 255, 0.5);
     border-radius: 20px;
     object-fit:cover;
@@ -73,7 +89,7 @@
     height: 100%;
 }
 
-#tarjeta_2 img:last-child {
+#imagen_2_tarjeta_2 {
     position: absolute;
     width: 500;
     bottom: 0;
@@ -108,7 +124,6 @@
 }
 #tarjeta_2:hover img:last-child{
     opacity: 1;
-    transform: translateY(10%);
 }
 
 #tarjeta_3 {
@@ -119,7 +134,7 @@
 
 }
 
-#tarjeta_3 img:first-child {
+#imagen_1_tarjeta_3 {
     box-shadow: 0 60px 60px -60px rgba(0, 30, 255, 0.5);
     border-radius: 20px;
     object-fit:cover;
@@ -127,7 +142,7 @@
     height: 100%;
 }
 
-#tarjeta_3 img:last-child {
+#imagen_2_tarjeta_3 {
     position: absolute;
     width: 500;
     bottom: 0;
@@ -163,6 +178,6 @@
 }
 #tarjeta_3:hover img:last-child{
     opacity: 1;
-    transform: translateY(10%);
+
 }
 
